# qudit-circuit

./: Cargo.toml  README.md  todo.txt
benches/: circuit_math.rs  circuit_struct.rs  common.rs  qvm.rs
src/: circuit.rs  compact.rs  cycle.rs  cyclelist.rs  instruction.rs  lib.rs  location.rs  operation.rs  point.rs
src/old/: lib.rs  radices.rs  system.rs
src/old/circuit/: circuit.rs  cycle.rs  instruction.rs  iterator.rs  location.rs  mod.rs  node.rs  operation.rs  point.rs
src/old/gates/: mod.rs  named.rs
src/old/gates/composed/: control.rs  dagger.rs
src/old/gates/constant/: h.rs  i.rs  swap.rs  t.rs  x.rs  z.rs
src/old/gates/parameterized/: p.rs  u3.rs
src/old/inst/: bfgs.rs  cost.rs  hsd.rs  instantiater.rs  mod.rs  optimizer.rs  target.rs  target.rs.bak
src/old/math/: frpr.rs  function.rs  math.rs  mod.rs  perm.rs  scalar.rs
src/old/math/matrix/: matgrad.rs  matgradmut.rs  matgradref.rs  mathess.rs  mathessmut.rs  mathessref.rs  mod.rs
src/old/math/mixed/: density.rs  function.rs  map.rs  mod.rs
src/old/math/pure/: function.rs  map.rs  mod.rs  vector.rs
src/old/math/unitary/: function.rs  gradient.rs  hessian.rs  matrix.rs  mod.rs  tensor.rs
src/old/sim/: mod.rs  qvm.rs
src/old/sim/bytecode/: buffer.rs  bytecode.rs  generalized.rs  generator.rs  mod.rs  optimizer.rs  specialized.rs
src/old/sim/bytecode/instructions/: frpr.rs  kron.rs  matmul.rs  write.rs
src/old/sim/compiler/: compiler.rs
src/old/sim/tree/: builder.rs  constant.rs  contract.rs  identity.rs  kron.rs  mod.rs  mul.rs  optimizer.rs  perm.rs  tree.rs
